2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditor.cs: Fixed undo/redo bug.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs: Worked
	  on undo/redo.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed Bug 362691 - Mouse click doesn't
	  clear selection in some specific case

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/IMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/BookmarkMargin.cs, Mono.TextEditor/GutterMargin.cs:
	  Worked on mouse behavior.
	
	  Fixing Bug 362683 - Double click + drag selection not working
	
	  Bug 362687 - Triple-click should select the whole line

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/BookmarkMargin.cs,
	  Mono.TextEditor/TextEditorOptions.cs: Implemented mouse wheel zoom.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Changed scroll to caret a bit.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Fixed tabs2spaces option.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* BooSyntaxMode.xml: Added boo syntax mode.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* VBNetSyntaxMode.xml: Fixed VB.NET syntax mode (comments).

2008-02-17  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextUtil.cs, Mono.TextEditor/TextEditor.cs: Worked on
	  search options.

2008-02-17  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Caret line highlighting works again.

2008-02-17  Mike Krüger <mkrueger@novell.com> 
